# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/package.gni")
import("//build/rust/rustc_binary.gni")

rustc_binary("bin") {
  name = "fortune"
  edition = "2018"

  deps = [
    "//third_party/rust_crates:rand",
  ]
}

package("fortune") {
  deps = [
    ":bin",
  ]

  binaries = [
    {
      name = "fortune"
      shell = true
    },
  ]
}
